--- a/views/JaeRyo.html
+++ b/views/JaeRyo.html
@@ -76,7 +76,7 @@
     <div class="control-group">
       <div class="form-group floating-label-form-group controls mb-0 pb-2">
         <label>Email Address</label>
-        <input class="mdb-autocomplete form-control" id="foodIngredients1" placeholder="첫번째 재료를 입력해주세요"
+        <input class="mdb-autocomplete form-control" name="food1" id="foodIngredients1" placeholder="1번째 재료를 입력해주세요"
           style="text-align: center">
         <!--<input class="form-control" id="email" type="email" placeholder="첫번째 재료를 입력해주세요" required="required" data-validation-required-message="Please enter your email address." style = "text-align: center">-->
         <p class="help-block text-danger"></p>
@@ -85,19 +85,44 @@
     <div class="control-group">
       <div class="form-group floating-label-form-group controls mb-0 pb-2">
         <label>Phone Number</label>
-        <input class="form-control" id="foodIngredients2" type="tel" placeholder="두번째 재료를 입력해주세요" required="required"
+        <input class="form-control" id="foodIngredients2" name="food2" type="tel" placeholder="2번째 재료를 입력해주세요" required="required"
           data-validation-required-message="Please enter your phone number." style="text-align: center">
         <p class="help-block text-danger"></p>
       </div>
     </div>
+    <div id="addRecipe"></div>
     <br>
 
     <div id="success"></div>
     <div class="form-group" style="text-align: center">
       <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">레시피 추천받기</button>
+      <button type="button" class="btn btn-primary btn-xl" onclick="appendRecipe()">레시피 추가하기</button>
     </div>
   </form>
 
+
 </body>
+
+<script type="text/javascript">
+let count = 2;
+
+function appendRecipe(){
+  count++;
+
+  $('#addRecipe').append(
+    `
+    <div class="control-group">
+      <div class="form-group floating-label-form-group controls mb-0 pb-2">
+        <label>Phone Number</label>
+        <input class="form-control" name="${count}" type="tel" placeholder="${count}번째 재료를 입력해주세요" required="required"
+          data-validation-required-message="Please enter your phone number." style="text-align: center">
+        <p class="help-block text-danger"></p>
+      </div>
+    </div>
+    `
+  )
+}
+</script>
+
 
 </html>
