--- a/views/Recipe.ejs
+++ b/views/Recipe.ejs
@@ -70,11 +70,10 @@
       <div class="row">
 ​
         <!-- Portfolio Item 1 -->
-      
-        
+             
         <% let i = 1; %>
         <% for(const a of list) { %>
-          <div class="portfolio-item mx-auto h-100 w-100" data-toggle="modal" data-target="#portfolioModal<%= i %>">
+          <div class="portfolio-item mx-auto h-100 w-100" data-toggle="modal" data-target="#portfolioModal<%= i %>" value="<%= i %>">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
                 <i class="fas fa-plus fa-3x"></i>
@@ -115,9 +114,14 @@
                             <i class="fas fa-times fa-fw"></i>
                             Close Window
                           </button>
-                          
+  
                           <div id="disqus_thread"></div>
                             <script>
+                              const disqus_config = function () {
+                                this.page.url = "localhost:3000/recipe";            // Replace PAGE_URL with your page's canonical URL variable
+                                this.page.identifier = $('.portfolio-item').value;             // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                              };
+                              
                               (function() { // DON'T EDIT BELOW THIS LINE
                               var d = document, s = d.createElement('script');
                               s.src = 'https://boostj.disqus.com/embed.js';
@@ -125,9 +129,8 @@
                               (d.head || d.body).appendChild(s);
                               })();
                               </script>
-                            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                            
-                        </div>
+                            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>                           
+                          </div>
 
                         </div>
                       </div>
